# DockerOps

./: .dockerignore  Cargo.toml  DOCUMENTATION.md  Dockerfile  README.md
deploy/: dockerops-stack.yml
examples/: secrets-example.yaml
src/: commands.rs  compose_processor.rs  config.rs  main.rs  models.rs  secret_processor.rs  stack_processor.rs  volume_processor.rs
src/docker/: client.rs  images.rs  mod.rs  stacks.rs
src/github/: client.rs  mod.rs  repository.rs
