[package]
name = "dockerops"
version = "0.0.21"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"
git2 = "0.18"
walkdir = "2.4"
serde_yaml = "0.9"
bollard = "0.20"
octocrab = "0.36"
futures = "0.3"